:recycle: extracted year list component :fix: fixed the scroll button on the detail stat component hiding behind the year select area

--- a/client/src/components/DetailStat/DetailStat.module.scss
+++ b/client/src/components/DetailStat/DetailStat.module.scss
@@ -1,124 +1,123 @@
 @function toRem($value) {
-    $remValue: ($value / 16) + rem;
-    @return $remValue;
+  $remValue: ($value / 16) + rem;
+  @return $remValue;
 }
 
 @keyframes colorAni {
-    0% {
-        background-position: 0% 50%;
-    }
+  0% {
+    background-position: 0% 50%;
+  }
 
-    50% {
-        background-position: 100% 50%;
-    }
+  50% {
+    background-position: 100% 50%;
+  }
 
-    100% {
-        background-position: 0% 50%;
-    }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .wrapper {
-    position: relative;
-    font-family: 'Jua', 'sans-serif';
-    //flex
-    display: flex;
-    align-items: center;
-    margin-right: 30px;
-    button {
-        position: absolute;
-        z-index: 5;
-        background-color: transparent;
-        border: none;
-        cursor: pointer;
-        opacity: 0.3;
-        transition: opacity 0.5s;
-        svg {
-            width: toRem(50);
-            height: toRem(50);
-            stroke: #673ab7;
-        }
-        &:hover {
-            opacity: 1;
-        }
+  position: relative;
+  font-family: "Jua", "sans-serif";
+  //flex
+  display: flex;
+  align-items: center;
+  margin-right: 30px;
+  button {
+    position: absolute;
+    z-index: 5;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    opacity: 0.3;
+    transition: opacity 0.5s;
+    svg {
+      width: toRem(50);
+      height: toRem(50);
+      stroke: #673ab7;
     }
-    #left {
-        left: 0;
+    &:hover {
+      opacity: 1;
     }
-    #right {
-        right: 0;
-    }
+  }
+  #left {
+    left: 0;
+  }
+  #right {
+    right: 0;
+  }
 }
 
 .statContainer {
+  position: relative;
+  max-width: 1000px;
+  white-space: nowrap; /***/
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+  background-color: white;
+  border: 2px solid #cfcfcf;
+  border-radius: 10px;
+  padding-bottom: 10px;
+
+  ul {
     position: relative;
-    max-width: 1000px;
-    white-space: nowrap; /***/
-    overflow-x: hidden;
-    scroll-behavior: smooth;
-    background-color: white;
-    border: 2px solid #cfcfcf;
-    border-radius: 10px;
-    padding-bottom: 10px;
-    
-    ul {
-        position: relative;
-        list-style-type: none;                
-        margin: 0;
-        padding: 0;
-        li {
-            width: fit-content;
-            display: inline-block;
-    
-            .cand {
-                padding: 0 toRem(10);
-                width: toRem(100);
-                .candStatBarArea {
-                    position: relative;
-                    height: 550px;
-                    @media (max-height: 800px) {
-                        height: 500px;
-                    }
-                    @media (max-height: 760px) {
-                        height: 450px;
-                    }
-                    @media (max-height: 700px) {
-                        height: 400px;
-                    }
-                    @media (max-height: 650px) {
-                        height: 320px;
-                    }
-                    box-sizing: border-box;
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                    justify-content: flex-end;
-                    margin-bottom: 10px;
-                    .statBar {
-                        position: relative;
-                        border: 2px solid #cfcfcf;
-                        bottom: 0;
-                        width: 70%;
-                        transition: height 1s;
-                        animation: colorAni 2s alternate infinite;
-                    }
-                }
-                .candName {
-                    font-size: toRem(15);
-                    span {
-                        font-size: toRem(24);
-                    }
-                    text-align: center;
-                }
-            }
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    li {
+      width: fit-content;
+      display: inline-block;
+
+      .cand {
+        padding: 0 toRem(10);
+        width: toRem(100);
+        .candStatBarArea {
+          position: relative;
+          height: 550px;
+          @media (max-height: 800px) {
+            height: 500px;
+          }
+          @media (max-height: 760px) {
+            height: 450px;
+          }
+          @media (max-height: 700px) {
+            height: 400px;
+          }
+          @media (max-height: 650px) {
+            height: 320px;
+          }
+          box-sizing: border-box;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: flex-end;
+          margin-bottom: 10px;
+          .statBar {
+            position: relative;
+            border: 2px solid #cfcfcf;
+            bottom: 0;
+            width: 70%;
+            transition: height 1s;
+            animation: colorAni 2s alternate infinite;
+          }
         }
+        .candName {
+          font-size: toRem(15);
+          span {
+            font-size: toRem(24);
+          }
+          text-align: center;
+        }
+      }
     }
-    
+  }
 }
 
 @for $i from 14 through 7 {
-    @media (max-width: ($i * 110px)) {
-        .statContainer {
-            max-width: (($i - 5) * 100px);
-        }
+  @media (max-width: ($i * 110px)) {
+    .statContainer {
+      max-width: (($i - 5) * 100px);
     }
+  }
 }
